--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CineMenu</title>
   </head>
-  <body></body>
+  <body>
+    <h1>CineMenu active ✅</h1>
+    <p id="film-title"></p>
+    <img id="film-poster" width="100"/>
+  </body>
+  <script src="popup.js"></script>
 </html>
